--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
       <title>Document</title>
       <link rel="stylesheet" href="style.css">
+      <script src="scripts.js" type="application/javascript"></script>
   </head>
   <body>
       <section id="home">
@@ -33,9 +34,9 @@
                 <legend>Temperature</legend>
                 <label for="celsius">Celsius</label> <br/>
 
- <input type="number" id="celsius"> <br/>
+                <input type="number" id="celsius"> <br/>
 
-                <button id="temperature"> Convert </button> <br/>
+                <button id="temperature" onclick="tempConversion()"> Convert </button> <br/>
 
                 <input type="number" id="fahrenheit"> <br/>
 
@@ -61,9 +62,9 @@
                 <legend>Weight</legend>
                 <label for="kilo">KG</label> <br/>
 
- <input type="number" id="kilo"> <br/>
+                <input type="number" id="kilo"> <br/>
 
-                <button id="weight"> Convert </button>  <br/>
+                <button id="weight" onclick="weightConversion()"> Convert </button>  <br/>
 
  
                 <input type="number" id="pounds">  <br/>
@@ -90,13 +91,13 @@
                 <legend>Distance</legend>
                   <label for="km">KM</label> <br/>
 
- <input type="number" id="km">  <br/>
+                  <input type="number" id="km">  <br/>
 
-                  <button id="distance"> Convert </button> <br/>
+                  <button id="distance" onclick="distanceConversion()"> Convert </button> <br/>
 
                   <input type="number" id="miles">  <br/>
 
-  <label for="miles">Miles</label>
+                  <label for="miles">Miles</label>
               </fieldset>
               <aside>
                 To convert kilometers to miles yourself, use this formula replacing the `km` with your distance in kilmeters: km &divide; 1.609
