Changed avatar picture to a personal picture

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <canvas id="particle-canvas"></canvas>
             </div>
             <div class="hero-content">
-                <img src="https://ultimaisolutions.github.io/ultimailogo/Logo-01.jpg" alt="Ofek Loya Profile Photo" class="hero-avatar">
+                <img src="https://ultimaisolutions.github.io/ofekWorkshop/website_images/personalpicture.jpg" alt="Ofek Loya Profile Photo" class="hero-avatar">
                 <h1 class="hero-name">Ofek Loya</h1>
                 <div class="hero-title">
                     <span class="typed-text"></span>
