Months since Ultim AI founding auto calculate using a script

--- a/index.html
+++ b/index.html
@@ -106,16 +106,16 @@
                         </p>
                         <div class="about-highlights">
                             <div class="highlight-item">
-                                <span class="highlight-number">4+</span>
+                                <span class="highlight-number" id="months_working">4+</span>
                                 <span class="highlight-label">Months Building AI Solutions</span>
                             </div>
                             <div class="highlight-item">
-                                <span class="highlight-number">3+</span>
+                                <span class="highlight-number">5</span>
                                 <span class="highlight-label">Years Military Leadership</span>
                             </div>
                             <div class="highlight-item">
-                                <span class="highlight-number">59</span>
-                                <span class="highlight-label">Officers Trained</span>
+                                <span class="highlight-number">100+</span>
+                                <span class="highlight-label">Soldiers Under My Command</span>
                             </div>
                         </div>
                         <p class="about-description">
