styling fixes for mobile view

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                             </p>
                             <div class="project-features">
                                 <ul>
-                                    <li>Automates customer support processes</li>
+                                    <li>Automates customer support processes, FAQs and support</li>
                                     <li>Learns and remembers customers</li>
                                     <li>CRM system integration</li>
                                 </ul>
@@ -426,16 +426,17 @@
                             <div class="project-placeholder">API</div>
                         </div>
                         <div class="project-content">
-                            <h3 class="project-title">WhatsApp Integration</h3>
+                            <h3 class="project-title">Custom WhatsApp Interface</h3>
                             <p class="project-category">Full Stack Development</p>
                             <p class="project-description">
-                                Complete WhatsApp interface for client SaaS platform with AI stress detection and analytics dashboard.
+                                Complete WhatsApp interface for client SaaS platform with AI features, analytics, templates and custom additions.
                             </p>
                             <div class="project-features">
                                 <ul>
-                                    <li>10-day development sprint</li>
-                                    <li>Multiple account integration</li>
-                                    <li>AI stress detection</li>
+                                    <li>Custom Filters</li>
+                                    <li>Template messages</li>
+                                    <li>Analytics and KPIs</li>
+                                    <li>Custom AI Features</li>
                                 </ul>
                             </div>
                             <div class="project-tech">
