Added an X button in the mobile menu overlay to properly exit it

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
 
     <!-- Mobile Menu -->
     <div class="mobile-menu">
+        <button class="mobile-menu-close" aria-label="Close mobile menu" type="button">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </button>
         <a href="#hero" class="nav-link">Home</a>
         <a href="#about" class="nav-link">About</a>
         <a href="#experience" class="nav-link">Experience</a>
